<?xml version="1.0"?>
<package>
  <name>radar_estimator</name>
  <version>0.0.0</version>
  <description>The radar_estimator package</description>

  <maintainer email="ulas@todo.todo">ulas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
